--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+brotlipy==0.7.0
 click==8.0.4
 colorama==0.4.4
 cycler==0.11.0
 Flask==2.0.3
 fonttools==4.30.0
+gunicorn==20.1.0
 itsdangerous==2.1.1
 Jinja2==3.0.3
 joblib==1.1.0
@@ -15,13 +17,13 @@ packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
 pyparsing==3.0.7
-python-dateutil==2.8.2
-pytz==2021.3
+pywin32==305.1
 scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
-six==1.16.0
 threadpoolctl==3.1.0
 unicorn==1.0.3
+webencodings==0.5.1
 Werkzeug==2.0.3
-gunicorn
+wincertstore==0.2
+
