--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ opencv-python-headless==4.5.5.64
 packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
-scikit-learn==1.0.2
+scikit-learn
 scipy==1.8.0
 seaborn==0.11.2
 threadpoolctl==3.1.0
