--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
 scikit-learn
-scipy==1.8.0
-seaborn==0.11.2
+scipy
+seaborn
 threadpoolctl==3.1.0
 unicorn==1.0.3
 webencodings==0.5.1
