--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ joblib==1.1.0
 kiwisolver==1.3.2
 MarkupSafe==2.1.0
 matplotlib==3.5.1
-numpy==1.22.3
+numpy
 opencv-python-headless==4.5.5.64
 packaging==21.3
 pandas==1.4.1
